Alignment and bug fixes: part -2

--- a/src/components/templates/Header/Header.module.scss
+++ b/src/components/templates/Header/Header.module.scss
@@ -58,7 +58,7 @@
           color: #fff;
           margin: 0 0.5rem;
           border: 1px solid transparent;
-          transition: color 0.3s ease, border 0.3s ease;
+          transition: color 0.3s ease;
 
           svg {
             fill: #fff;
