--- a/src/components/templates/Modal/Modal.module.scss
+++ b/src/components/templates/Modal/Modal.module.scss
@@ -28,22 +28,26 @@
 
   .modal {
     position: relative;
-    background: #000;
-    padding: 30px;
+    background: transparent;
+    backdrop-filter: blur(20px);
+    padding: 45px 30px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     opacity: 0;
+    margin: 0;
     transform: translateY(-50px);
     transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-    min-width: 80vw;
-    height: 90vh;
+    min-width: 60vw;
+    //height: 90vh;
+    width: 60vw;
+    background: linear-gradient(180deg, #10c99c 0%, #077989 100%);
   }
 
   @media screen and (max-width: 600px) {
-    align-items: flex-end;
+    align-items: center;
 
     &.open {
-      align-items: flex-end;
+      align-items: center;
 
       .modal {
         transform: translateY(0);
@@ -52,8 +56,8 @@
 
     .modal {
       width: 100%;
-      max-width: 300px;
-      border-radius: 10px 10px 0 0;
+      max-width: 350px;
+      border-radius: 10px;
       transform: translateY(100%);
     }
   }
@@ -61,10 +65,22 @@
 
 .closeButton {
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: 10px;
+  right: 14px;
+  width: 32px;
+  height: 32px;
+  padding: 2px 4px;
+  font-size: 16px;
   background: none;
   border: none;
   cursor: pointer;
   color: #fff;
+  border: 1px solid transparent;
+  border-radius: 50px;
+  transition: background 0.1s, color 0.2s ease;
+
+  &:hover {
+    background: #ad36cb;
+    color: #fff;
+  }
 }
